# rag-document-QA

./: .cursorrules  .env.example  .gitignore  Dockerfile  MIGRATION_INSTRUCTIONS.md  README.md  all_files.txt  docker-compose.yml  openapi.yaml  prometheus.yml  pyproject.toml  requirements.txt  test_doc.txt  test_output.txt
.github/workflows/: ci.yml
app/: README  __init__.py
app/api/: __init__.py  health.py  ingest.py  query.py  schemas.py
app/core/: __init__.py  chunker.py  config.py  embedder.py  llm.py  loader.py  metadata_store.py  prompt.py  retriever.py  vector_store.py
app/middleware/: __init__.py  auth.py  rate_limit.py
app/utils/: __init__.py  logging.py  metrics.py
tests/: conftest.py
tests/integration/: test_ingest_api.py  test_query_api.py
tests/unit/: test_chunker.py  test_embedder.py  test_prompt.py  test_retriever.py
