[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-qa"
version = "1.0.0"
description = "Production-grade RAG document Q&A system"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "flask==3.1.0",
    "langchain==0.3.27",
    "langchain-community==0.3.27",
    "langchain-google-genai==2.1.9",
    "langchain-text-splitters==0.3.9",
    "faiss-cpu==1.14.2",
    "pydantic==2.13.4",
    "pydantic-settings==2.8.1",
    "structlog==24.4.0",
    "prometheus-client==0.21.1",
    "PyJWT==2.10.1",
    "tiktoken==0.13.0",
    "python-dotenv==1.0.1",
    "pypdf==5.1.0",
    "python-docx==1.1.2",
    "beautifulsoup4==4.12.3",
    "lxml==6.1.1",
    "sqlalchemy==2.0.36",
    "werkzeug==3.1.3",
]

[project.optional-dependencies]
openai = [
    "langchain-openai==0.2.14",
    "openai==1.58.1",
]
prod = [
    "psycopg2-binary==2.9.10",
]
dev = [
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "ruff==0.8.4",
    "mypy==1.14.0",
    "types-PyJWT==1.7.1",
]

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]